; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da7219-aad.c_da7219_aad_fw_jack_rem_deb.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da7219-aad.c_da7219_aad_fw_jack_rem_deb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }

@DA7219_AAD_JACK_REM_DEB_1MS = common dso_local global i32 0, align 4
@DA7219_AAD_JACK_REM_DEB_5MS = common dso_local global i32 0, align 4
@DA7219_AAD_JACK_REM_DEB_10MS = common dso_local global i32 0, align 4
@DA7219_AAD_JACK_REM_DEB_20MS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Invalid jack removal debounce\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, i32)* @da7219_aad_fw_jack_rem_deb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da7219_aad_fw_jack_rem_deb(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %15 [
    i32 1, label %7
    i32 5, label %9
    i32 10, label %11
    i32 20, label %13
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @DA7219_AAD_JACK_REM_DEB_1MS, align 4
  store i32 %8, i32* %3, align 4
  br label %21

9:                                                ; preds = %2
  %10 = load i32, i32* @DA7219_AAD_JACK_REM_DEB_5MS, align 4
  store i32 %10, i32* %3, align 4
  br label %21

11:                                               ; preds = %2
  %12 = load i32, i32* @DA7219_AAD_JACK_REM_DEB_10MS, align 4
  store i32 %12, i32* %3, align 4
  br label %21

13:                                               ; preds = %2
  %14 = load i32, i32* @DA7219_AAD_JACK_REM_DEB_20MS, align 4
  store i32 %14, i32* %3, align 4
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %17 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @dev_warn(i32 %18, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %20 = load i32, i32* @DA7219_AAD_JACK_REM_DEB_1MS, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %15, %13, %11, %9, %7
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @dev_warn(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
